examples/test/testpolicy8605.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8605
  namespace: namespace125
spec:
  podSelector:
    matchLabels:
      key23: value45
      key30: value26
      key34: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value27
          key35: value39
      podSelector:
        matchLabels:
          key9: value42
